--- a/templates/base.twig
+++ b/templates/base.twig
@@ -79,6 +79,28 @@
     <script type="application/javascript" src="/jquery/jquery-ui.min.js"></script>
     <script type="application/javascript" src="/popper/dist/umd/popper.min.js"></script>
     <script type="application/javascript" src="/bootstrap/js/bootstrap.min.js"></script>
-    {% block customJs %}{% endblock %}
+
+  <!-- Global Site Tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-352655-1"></script>
+  <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments)};
+      gtag('js', new Date());
+
+      gtag('config', 'UA-352655-1');
+  </script>
+
+  <script>
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+              (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+          m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+      })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+      ga('create', 'UA-352655-1', 'auto');
+      ga('send', 'pageview');
+
+  </script>
+
+  {% block customJs %}{% endblock %}
   </body>
 </html>
