--- a/templates/base.twig
+++ b/templates/base.twig
@@ -13,6 +13,8 @@
         .orange { color: #e59500; }
         .orange-bg { background: #e59500; }
         .footer { margin-top: 350px; border-top: 1px solid black; }
+        .code { background: #ebebeb; padding: 15px; border: 1px solid darkgrey; max-height: 350px; overflow: auto;}
+        .cli { background: #ebebeb; color: #cc0000; padding: 2px; border: 1px solid darkgrey;}
     </style>
   </head>
   <body>
