Making a link to the API documentation
Always nice to inform users.

--- a/templates/base.twig
+++ b/templates/base.twig
@@ -70,7 +70,8 @@
             </div>
             <div class="col-sm-4">&nbsp;</div>
             <div class="col-sm-4">
-                <p>GDPR - General Data Protection Regulation</p>
+                <p>GDPR - General Data Protection Regulation<br>
+                <a href="/api" title="API documentation">API</a></p>
             </div>
         </div>
     </div>
