--- a/templates/admin/edit.twig
+++ b/templates/admin/edit.twig
@@ -47,6 +47,11 @@
                 </div>
 
                 <div class="form-group">
+                    <label for="update-privacy-policy">Privacy policy link</label>
+                    <input type="text" name="privacy_policy" id="update-privacy-policy" class="form-control" value="{{ data.privacy_policy }}">
+                </div>
+
+                <div class="form-group">
                     <label for="update-compliance">Compliant</label>
                     <select name="compliant" id="update-compliance" class="form-control">
                         {% for key, value in compliance %}
@@ -57,6 +62,11 @@
                             {% endif %}
                         {% endfor %}
                     </select>
+                </div>
+
+                <div class="form-group">
+                    <label for="update-policy-comment">Privacy policy comment</label>
+                    <input type="text" name="comment" id="update-policy-comment" class="form-control" value="{{ comment }}">
                 </div>
 
                 <input type="submit" class="btn btn-success" value="{{ action|capitalize }}"> <a href="/admin" class="btn btn-default">Cancel</a>
